--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "hosting": {
+    "target": "line-liff",
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
