--- a/package.json
+++ b/package.json
@@ -3,50 +3,53 @@
   "author": "Puchida Co., Ltd.",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 4000",
+    "tunnel": "~/ngrok http --region=ap 4000",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint --ext js,ts,tsx --cache --fix src/"
   },
   "dependencies": {
-    "@line/liff": "^2.12.0",
-    "firebase-tools": "^9.16.0",
+    "@line/liff": "^2.13.0",
+    "firebase": "^9.0.0-beta.8",
+    "firebase-tools": "^9.16.5",
     "global": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "next"
+    "react-router-dom": "next",
+    "use-cookie-consent": "^0.1.10"
   },
   "devDependencies": {
-    "@headlessui/react": "^1.3.0",
-    "@heroicons/react": "^1.0.2",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "@types/react": "^17.0.15",
+    "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "@vitejs/plugin-react-refresh": "^1.3.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.3.1",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
-    "lint-staged": "^11.1.1",
+    "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.7",
-    "tailwindcss-debug-screens": "^2.0.0",
+    "tailwindcss-debug-screens": "^2.1.0",
     "typescript": "^4.3.5",
-    "vite": "^2.4.3"
+    "vite": "^2.4.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
