--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@line/liff": "^2.13.0",
+    "axios": "^0.21.1",
     "firebase": "^9.0.0-beta.8",
     "firebase-tools": "^9.16.5",
     "global": "^4.4.0",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "graphql.macro": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "next",
