--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "graphql.macro": "^1.4.2",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-router-dom": "next",
     "use-cookie-consent": "^0.1.10"
   },
@@ -32,6 +34,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
@@ -41,12 +44,11 @@
     "autoprefixer": "^10.3.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
@@ -54,7 +56,26 @@
     "tailwindcss": "^2.2.7",
     "tailwindcss-debug-screens": "^2.1.0",
     "typescript": "^4.3.5",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-react-jsx": "^1.1.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "lint-staged": {
     "*.{ts,tsx}": [
