--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.3.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -57,7 +56,7 @@
     "tailwindcss-debug-screens": "^2.1.0",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
-    "vite-react-jsx": "^1.1.2"
+    "vite-preset-react": "^1.3.0"
   },
   "eslintConfig": {
     "extends": [
