--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
+    "react-hook-form": "^7.12.2",
+    "react-hot-toast": "^2.1.0",
     "react-router-dom": "next",
     "use-cookie-consent": "^0.1.10"
   },
@@ -38,6 +40,7 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/webappsec-credential-management": "^0.6.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
