--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["vite/client", "@types/webappsec-credential-management"],
+    "types": ["vite/client", "node", "@types/webappsec-credential-management"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
