--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "axios": "^0.21.1",
     "firebase": "^9.0.0-beta.8",
     "firebase-tools": "^9.16.5",
-    "firebaseui": "^4.8.1",
-    "global": "^4.4.0",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "graphql.macro": "^1.4.2",
@@ -26,8 +24,7 @@
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.12.2",
     "react-hot-toast": "^2.1.0",
-    "react-router-dom": "next",
-    "use-cookie-consent": "^0.1.10"
+    "react-router-dom": "next"
   },
   "devDependencies": {
     "@headlessui/react": "^1.4.0",
@@ -59,7 +56,8 @@
     "tailwindcss-debug-screens": "^2.1.0",
     "typescript": "^4.3.5",
     "vite": "^2.5.0",
-    "vite-preset-react": "^1.3.0"
+    "vite-preset-react": "^1.3.0",
+    "vite-tsconfig-paths": "^3.3.13"
   },
   "eslintConfig": {
     "extends": [
