--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "semi": false,
-  "tabWidth": 2,
-  "singleQuote": true,
   "useTabs": false,
-  "printWidth": 160
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "none"
 }
