--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.12.2",
     "react-hot-toast": "^2.1.0",
-    "react-router-dom": "next"
+    "wouter": "^2.7.4"
   },
   "devDependencies": {
     "@headlessui/react": "^1.4.0",
@@ -36,7 +36,6 @@
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "@types/webappsec-credential-management": "^0.6.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
