--- a/package.json
+++ b/package.json
@@ -12,51 +12,51 @@
   },
   "dependencies": {
     "@line/liff": "^2.13.0",
-    "axios": "^0.21.1",
-    "firebase": "^9.0.0-beta.8",
-    "firebase-tools": "^9.16.5",
-    "graphql": "^15.5.1",
+    "axios": "^0.21.4",
+    "firebase": "^9.0.2",
+    "firebase-tools": "^9.18.0",
+    "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
     "graphql.macro": "^1.4.2",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.9",
-    "react-hook-form": "^7.12.2",
-    "react-hot-toast": "^2.1.0",
+    "react-helmet-async": "^1.1.2",
+    "react-hook-form": "^7.15.2",
+    "react-hot-toast": "^2.1.1",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.3",
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "@types/node": "^16.6.1",
-    "@types/react": "^17.0.18",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/webappsec-credential-management": "^0.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "autoprefixer": "^10.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "autoprefixer": "^10.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.1",
+    "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.7",
+    "prettier": "^2.4.0",
+    "tailwindcss": "^2.2.15",
     "tailwindcss-debug-screens": "^2.1.0",
-    "typescript": "^4.3.5",
-    "vite": "^2.5.0",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.6",
     "vite-preset-react": "^1.3.0",
-    "vite-tsconfig-paths": "^3.3.13"
+    "vite-tsconfig-paths": "^3.3.14"
   },
   "eslintConfig": {
     "extends": [
