--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -5,7 +5,7 @@ on:
       - main
 env:
   RECAPTCHA_SITE_SECRET: "6Lc0mXwaAAAAAAllRoZlUf5M3DyhUizGidWdxl0X"
-  VITE_CLOUD_FUNCTIONS_URL: "https://asia-southeast1-puchida-production.cloudfunctions.net"
+  VITE_CLOUD_FUNCTIONS_URL: "https://puchida.com"
 
 jobs:
   build:
