fix: function env to beta

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -5,7 +5,7 @@ on:
       - main
 env:
   RECAPTCHA_SITE_SECRET: "6Lc0mXwaAAAAAAllRoZlUf5M3DyhUizGidWdxl0X"
-  VITE_CLOUD_FUNCTIONS_URL: "https://puchida.com"
+  VITE_CLOUD_FUNCTIONS_URL: "https://beta.puchida.com"
 
 jobs:
   build:
